<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lljackie.mycountdown.MainActivity">


    <Button
        android:id="@+id/bt_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_1"
        android:background="@drawable/selector_bt"
        android:text="@string/bt_2"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/bt_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_2"
        android:background="@drawable/selector_bt"
        android:text="@string/bt_3"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/bt_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_3"
        android:background="@drawable/selector_bt"
        android:text="@string/bt_4"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/bt_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_4"
        android:background="@drawable/selector_bt"
        android:text="@string/bt_5"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/bt_cus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_5"
        android:background="@drawable/selector_bt"
        android:text="@string/bt_customized"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/bt_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/selector_bt"
        android:text="@string/bt_1"
        android:textAllCaps="false" />
</RelativeLayout>
